# JSON-Studio

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.ps1
.github/workflows/: build.yml
assets/logo/: JsonStudio.icns  app.rc  make-icns.py  make-icns.sh  make-sheet.sh
packaging/linux/: jsonstudio.desktop
samples/: sample.json  sample.yaml
src/: main.cpp
src/core/: JsonTools.cpp  JsonTools.h  Updater.cpp  Updater.h  Version.cpp  Version.h  YamlTools.cpp  YamlTools.h
src/editor/: CodeEditor.cpp  CodeEditor.h  EditorPane.cpp  EditorPane.h  JsonHighlighter.cpp  JsonHighlighter.h  Minimap.cpp  Minimap.h  Syntax.cpp  Syntax.h  YamlHighlighter.cpp  YamlHighlighter.h
src/ui/: CommandPalette.cpp  CommandPalette.h  MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h
tests/: Check.h  main.cpp  test_jsontools.cpp  test_version.cpp  test_yamltools.cpp
